# kio

./: .kde-ci.yml  CMakeLists.txt
src/: CMakeLists.txt
src/core/: CMakeLists.txt  commands_p.h  connection.cpp  connection_p.h  connectionbackend_p.h  copyjob.cpp  dataworker.cpp  dataworker_p.h  global.h  hostinfo.cpp  job_base.h  job_p.h  kcoredirlister.cpp  kcoredirlister.h  kcoredirlister_p.h  kfileitem.cpp  kmountpoint.cpp  kmountpoint.h  listjob.h  mkdirjob.h  simplejob.cpp  slavebase.cpp  slavebase.h  socketconnectionbackend.cpp  socketconnectionbackend_p.h  threadconnectionbackend.cpp  threadconnectionbackend_p.h  worker.cpp  worker_p.h  workerbase.cpp  workerbase.h  workerinterface.cpp  workerinterface_p.h
src/filewidgets/: kdiroperator.cpp  kfileplacesmodel.cpp  kfileplacesview.cpp  kfilewidget.cpp  knewfilemenu.cpp  kurlnavigator.cpp  kurlnavigatorbutton.cpp
src/gui/: CMakeLists.txt  applicationlauncherjob.cpp  dbusactivationrunner.cpp  dbusactivationrunner_p.h  filepreviewjob.cpp  filepreviewjob.h  kprocessrunner.cpp  kprocessrunner_p.h  openurljob.cpp  previewjob.cpp  previewjob.h
src/ioslaves/file/: file_unix.cpp
src/kioworkers/file/: file.cpp  file.h  file_unix.cpp
src/kioworkers/ftp/: ftp.cpp
src/kioworkers/trash/: trashimpl.cpp
src/new_file_templates/: Directory.desktop  HTMLFile.desktop  TextFile.desktop
src/urifilters/ikws/: CMakeLists.txt  ikwsopts.cpp  ikwsopts.h  kuriikwsfiltereng.cpp
src/widgets/: kdirmodel.cpp  kfileitemactions.cpp  kurlcombobox.cpp  kurlrequester.cpp  renamefiledialog.cpp  widgetsaskuseractionhandler.cpp
(+121 files in other folders)
